<resources>
    <string name="app_name">SuperHeroApp_API</string>
    <string name="dark_mode">Modo Oscuro</string>

    <string name="intelligence">intelligence</string>
    <string name="strength">strength</string>
    <string name="speed">speed</string>
    <string name="durability">durability</string>
    <string name="power">power</string>
    <string name="combat">combat</string>


</resources>