<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        android:layout_marginTop="220dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="arroz"
                android:textAllCaps="true"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                tools:text="arroz"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="arroz"
                android:textSize="11sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:gravity="bottom"
                android:layout_marginTop="24dp">

                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:gravity="bottom"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/intelligence"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="10sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/strength"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="10sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:singleLine="true"
                android:maxLines="1"
                android:text="@string/speed"
                android:textSize="10sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/durability"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="10sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/power"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="10sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/combat"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="10sp"
                android:layout_weight="1"/>

        </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>